--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Epub parser",
   "main": "src/index.js",
   "scripts": {
+    "lint": "eslint ./src",
+    "lint:fix": "eslint ./src --fix",
+    "tsc": "rm -rf dist && tsc --project tsconfig.compile.json"
   },
   "dependencies": {
     "node-zip": ">=0.0.2",
@@ -12,6 +15,8 @@
     "eyes": "~0.1.8"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
     "eslint": "^8.0.0",
     "eslint-config-airbnb": "^19.0.0",
     "eslint-config-prettier": "^8.5.0",
