--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "tsc": "rm -rf dist && tsc --project tsconfig.compile.json"
   },
   "dependencies": {
+    "eyes": "~0.1.8",
     "node-zip": ">=0.0.2",
-    "xml2js": ">=0.0.1",
     "request": "~2.12.0",
-    "eyes": "~0.1.8"
+    "xml2js": ">=0.0.1"
   },
   "devDependencies": {
+    "@types/request": "^2.48.12",
+    "@types/xml2js": "^0.4.14",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "eslint": "^8.0.0",
