--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "eyes": "~0.1.8",
-    "node-zip": ">=0.0.2",
+    "jszip": "2.5.0",
     "request": "~2.12.0",
     "xml2js": ">=0.0.1"
   },
