--- a/package.json
+++ b/package.json
@@ -2,33 +2,51 @@
   "name": "epub-parser",
   "version": "0.2.5",
   "description": "Epub parser",
+  "main": "src/index.js",
+  "scripts": {
+    "lint": "eslint ./src",
+    "lint:fix": "eslint ./src --fix",
+    "tsc": "rm -rf dist && tsc --project tsconfig.compile.json"
+  },
+  "dependencies": {
+    "eyes": "~0.1.8",
+    "node-zip": ">=0.0.2",
+    "request": "~2.12.0",
+    "xml2js": ">=0.0.1"
+  },
+  "devDependencies": {
+    "@types/request": "^2.48.12",
+    "@types/xml2js": "^0.4.14",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "eslint": "^8.0.0",
+    "eslint-config-airbnb": "^19.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.0.0",
+    "eslint-plugin-import": "^2.23.3",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^28.0.0",
+    "jest-junit": "^14.0.0",
+    "prettier": "^2.3.0",
+    "ts-jest": "^28.0.0",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.2.3",
+    "vows": "0.5.x"
+  },
+  "directories": {
+    "example": "example"
+  },
   "keywords": [
     "epub"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/Vaporbook/epub-parser.git"
+  },
   "homepage": "https://github.com/Vaporbook/epub-parser",
   "bugs": {
     "email": "aaron@readsocialapi.com"
   },
   "author": "Aaron Miller <aaron@readsocialapi.com> (http://twitter.com/vaporbook)",
-  "dependencies": {
-    "node-zip": ">=0.0.2",
-    "xml2js": ">=0.0.1",
-    "request": "~2.12.0",
-    "eyes": "~0.1.8"
-  },
-  "devDependencies": {
-    "vows": "0.5.x"
-  },
-  "main": "index.js",
-  "directories": {
-    "example": "example"
-  },
-  "scripts": {
-    "test": "node ./example/parse.js example/testbook.epub"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/Vaporbook/epub-parser.git"
-  },
   "license": "BSD"
 }
