--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,7 +30,7 @@ jobs:
           git config user.name "github-actions"
           git config user.email "github-actions@noreply.github.com"
           VERSION=`npm version ${{ github.event.inputs.version }}`
-          git push origin HEAD:${{ github.ref_name }} --follow-tags
+          git push origin HEAD:${{ github.head_ref || github.ref_name }} --follow-tags
 
       - name: "Install dependencies"
         run: npm install
