--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
 sonar.projectKey=daxadal_epub-parser
 sonar.organization=daxadal
 # sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.exclusions=test/, *.test.ts, **/node_modules/**
