fix: add sonar cloud secrets

--- a/.github/workflows/base-checks.yml
+++ b/.github/workflows/base-checks.yml
@@ -35,6 +35,6 @@ jobs:
       - name: SonarCloud Scan
         if: ${{ failure() || success() }}
         uses: SonarSource/sonarcloud-github-action@master
-        # env:
-        #   GITHUB_TOKEN: ${{ secrets.SECRET_GITHUB_TOKEN }} # Needed to get PR information, if any
-        #   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.SECRET_GITHUB_TOKEN }} # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
