--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - feat/release-please
 
 permissions:
   contents: write
@@ -15,5 +16,5 @@ jobs:
     steps:
       - uses: google-github-actions/release-please-action@v4
         with:
-          token: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
+          # token: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
           release-type: node
