--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,14 +1,19 @@
 name: release-please
 
 on:
-  workflow_call:
-    secrets:
-      token:
-        required: true
-        
+  push:
+    branches:
+      - master
+
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   release-please:
-    if: ${{ github.ref == 'refs/heads/master' }}
     runs-on: ubuntu-latest
     steps:
       - uses: google-github-actions/release-please-action@v4
+        with:
+          # token: ${{ secrets.MY_RELEASE_PLEASE_TOKEN }}
+          release-type: node
