--- a/package.json
+++ b/package.json
@@ -10,13 +10,11 @@
     "tsc": "rm -rf dist && tsc --project tsconfig.compile.json"
   },
   "dependencies": {
-    "eyes": "~0.1.8",
     "jszip": "2.5.0",
     "request": "~2.12.0",
     "xml2js": ">=0.0.1"
   },
   "devDependencies": {
-    "@types/eyes": "^0.1.35",
     "@types/jest": "^29.5.12",
     "@types/request": "^2.48.12",
     "@types/xml2js": "^0.4.14",
@@ -34,11 +32,7 @@
     "prettier": "^2.3.0",
     "ts-jest": "^28.0.0",
     "ts-node": "^10.4.0",
-    "typescript": "^4.2.3",
-    "vows": "0.5.x"
-  },
-  "directories": {
-    "example": "example"
+    "typescript": "^4.2.3"
   },
   "keywords": [
     "epub"
