feat: add compatibility test (#10)
* chore: use Regex.exec instead of string match

* chore: restore tests (as is)

* refactor: prettier

* chore: delete unused file

* refactor: refactor to Typescript

* chore: add test script. install type

* feat: use unused variables

* Revert "feat: use unused variables"

This reverts commit 8a3c29c7b85e6c6dc848398424661d9963c7cf37.

* choer: fix test configuration

* feat: use unused variables. Add modes to open. minor fixes

* chore: delete original test. It doesn't actually test

* chore. add compatibility test

* revert: delete modes (for now)

* chore: delete unused packages

--- a/package.json
+++ b/package.json
@@ -6,20 +6,21 @@
   "scripts": {
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
-    "test": "echo \"Test not yet implemented\"",
+    "test": "jest --runInBand",
     "tsc": "rm -rf dist && tsc --project tsconfig.compile.json"
   },
   "dependencies": {
-    "eyes": "~0.1.8",
     "jszip": "2.5.0",
     "request": "~2.12.0",
     "xml2js": ">=0.0.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/request": "^2.48.12",
     "@types/xml2js": "^0.4.14",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
+    "epub-parser": "^0.2.5",
     "eslint": "^8.0.0",
     "eslint-config-airbnb": "^19.0.0",
     "eslint-config-prettier": "^8.5.0",
@@ -31,11 +32,7 @@
     "prettier": "^2.3.0",
     "ts-jest": "^28.0.0",
     "ts-node": "^10.4.0",
-    "typescript": "^4.2.3",
-    "vows": "0.5.x"
-  },
-  "directories": {
-    "example": "example"
+    "typescript": "^4.2.3"
   },
   "keywords": [
     "epub"
