--- a/package.json
+++ b/package.json
@@ -10,16 +10,38 @@
     "tsc": "rm -rf dist && tsc --project tsconfig.compile.json"
   },
   "dependencies": {
+    "archiver": "^6.0.1",
+    "axios": "^1.6.7",
+    "diacritics": "^1.3.0",
+    "ejs": "^3.1.9",
+    "entities": "^4.5.0",
+    "fs-extra": "^11.2.0",
+    "image-size": "^1.1.1",
     "jszip": "2.5.0",
+    "mime": "^4.0.1",
+    "rehype-parse": "^9.0.0",
+    "rehype-stringify": "^10.0.0",
     "request": "~2.12.0",
+    "unified": "^11.0.4",
+    "unist-util-visit": "^5.0.0",
+    "uslug": "^1.0.4",
     "xml2js": ">=0.0.1"
   },
   "devDependencies": {
+    "@tsconfig/node18": "^18.2.2",
+    "@types/archiver": "^6.0.2",
+    "@types/diacritics": "^1.3.3",
+    "@types/ejs": "^3.1.5",
+    "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.12",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.11.20",
     "@types/request": "^2.48.12",
+    "@types/uslug": "^1.0.4",
     "@types/xml2js": "^0.4.14",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
+    "cross-env": "^7.0.3",
     "epub-parser": "^0.2.5",
     "eslint": "^8.0.0",
     "eslint-config-airbnb": "^19.0.0",
@@ -29,10 +51,11 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^28.0.0",
     "jest-junit": "^14.0.0",
+    "mocha": "^10.3.0",
     "prettier": "^2.3.0",
     "ts-jest": "^28.0.0",
     "ts-node": "^10.4.0",
-    "typescript": "^4.2.3"
+    "typescript": "^4.9.5"
   },
   "keywords": [
     "epub"
