chore: install library. fix eslint

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.9",
     "entities": "^4.5.0",
     "fs-extra": "^11.2.0",
+    "hast": "^1.0.0",
     "image-size": "^1.1.1",
     "jszip": "2.5.0",
     "mime": "^4.0.1",
