--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "xml2js": ">=0.0.1"
   },
   "devDependencies": {
+    "@lesjoursfr/html-to-epub": "^4.2.4",
     "@tsconfig/node18": "^18.2.2",
     "@types/archiver": "^6.0.2",
     "@types/diacritics": "^1.3.3",
